--- a/sass/pages/search.scss
+++ b/sass/pages/search.scss
@@ -300,7 +300,7 @@ Search Page
 				bottom:0;
 				left:0;
 				right:0;
-				margin:auto;
+				margin:0;
 			}
 		}
 
